@@ -6523,7 +6523,7 @@ class DBProxy(taskbuffer.OraDBProxy.DBProxy):
             # sql to reset running files
             sqlRR  = "UPDATE {0}.JEDI_Dataset_Contents ".format(jedi_config.db.schemaJEDI)
             sqlRR += "SET status=:newStatus,attemptNr=attemptNr+1,maxAttempt=maxAttempt+:maxAttempt " 
-            sqlRR += "WHERE jediTaskID=:jediTaskID AND datasetID=:datasetID AND status=:oldStatus "
+            sqlRR += "WHERE jediTaskID=:jediTaskID AND datasetID=:datasetID AND status IN (:oldStatus1,:oldStatus2) "
             sqlRR += "AND keepTrack=:keepTrack AND maxAttempt IS NOT NULL "
             # sql to update output/lib/log datasets
             sqlUO  = "UPDATE {0}.JEDI_Datasets ".format(jedi_config.db.schemaJEDI)
@@ -6639,7 +6639,8 @@ class DBProxy(taskbuffer.OraDBProxy.DBProxy):
                             varMap = {}
                             varMap[':jediTaskID'] = jediTaskID
                             varMap[':datasetID']  = datasetID
-                            varMap[':oldStatus']  = 'running'
+                            varMap[':oldStatus1'] = 'running'
+                            varMap[':oldStatus2'] = 'picked'
                             varMap[':newStatus']  = 'ready'
                             varMap[':keepTrack']  = 1
                             varMap[':maxAttempt'] = maxAttempt
@@ -6686,7 +6687,8 @@ class DBProxy(taskbuffer.OraDBProxy.DBProxy):
                             varMap = {}
                             varMap[':jediTaskID'] = jediTaskID
                             varMap[':datasetID']  = datasetID
-                            varMap[':oldStatus']  = 'running'
+                            varMap[':oldStatus1'] = 'running'
+                            varMap[':oldStatus2'] = 'picked'
                             varMap[':newStatus']  = 'ready'
                             varMap[':keepTrack']  = 1
                             varMap[':maxAttempt'] = maxAttempt
@@ -7530,21 +7532,20 @@ class DBProxy(taskbuffer.OraDBProxy.DBProxy):
             varMap[':lockedBy'] = pid
             self.cur.execute(sqlPD+comment,varMap)
             nRow = self.cur.rowcount
-            # check lock
-            varMap = {}
-            varMap[':jediTaskID'] = jediTaskID
-            self.cur.execute(sqlCL+comment,varMap)
-            resCL = self.cur.fetchone()
-            # commit
-            if not self._commit():
-                raise RuntimeError, 'Commit error'
             if nRow == 1:
                 retVal = True
                 tmpLog.debug('done with {0}'.format(retVal))
             else:
                 retVal = False
-                tmpLockedBy,tmpLockedTime
+                # check lock
+                varMap = {}
+                varMap[':jediTaskID'] = jediTaskID
+                self.cur.execute(sqlCL+comment,varMap)
+                tmpLockedBy,tmpLockedTime = self.cur.fetchone()
                 tmpLog.debug('done with {0} locked by another {1} at {2}'.format(retVal,tmpLockedBy,tmpLockedTime))
+            # commit
+            if not self._commit():
+                raise RuntimeError, 'Commit error'
             # return    
             return retVal
         except:
