@@ -1,6 +1,7 @@
 Release Notes
 
 * 7/8/2015
+  * fixed retryTask to reset picked files
   * setting amiFlag
   * changed goal to have the first decimal place
   * changed child tasks not to go done when parents are not done
